fix Recursive display as monospace on Safari

--- a/src/layouts/base.css
+++ b/src/layouts/base.css
@@ -11,12 +11,12 @@
 
 .edit,
 .prose a {
-  font-variation-settings: 'CASL' 1, 'CRSV' 1, 'slnt' -3;
+  font-variation-settings: 'CASL' 1, 'CRSV' 1, 'slnt' -3, 'MONO' 0;
   @apply no-underline;
 }
 
 .edit:hover,
 .prose a:hover {
-  font-variation-settings: 'CASL' 1, 'CRSV' 1, 'slnt' -6;
+  font-variation-settings: 'CASL' 1, 'CRSV' 1, 'slnt' -6, 'MONO' 0;
   @apply font-semibold;
 }
